# shipit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-site.yml  publish.yml  release.yml
site/: index.html  robots.txt  sitemap.xml
src/: cli.rs  common.rs  context.rs  error.rs  main.rs  settings.rs
src/commands/: b2b.rs  config.rs  mod.rs
