[package]
name = "shipit"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A CLI for managing git releases"
repository = "https://github.com/trollefson/shipit"
authors = ["Tanner Rollefson"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
git2 = "0.20.4"
gitlab = "0.1808.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
confy = "2.0.0"
octocrab = "0.41"
